Closed
Bug 660326
Opened 14 years ago
Closed 14 years ago
send java exceptions to crash-stats
Categories
(Core Graveyard :: Widget: Android, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla7
People
(Reporter: blassey, Assigned: blassey)
References
Details
Attachments
(1 file, 1 obsolete file)
4.76 KB,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Attachment #535725 -
Flags: review?(doug.turner)
Assignee | ||
Comment 1•14 years ago
|
||
here's an example crash report with this patch https://crash-stats.mozilla.com/report/index/478f8d29-7977-4e12-b724-4b86b2110527
Comment 2•14 years ago
|
||
Comment on attachment 535725 [details] [diff] [review]
patch
>+ } catch (Exception e) {
>+ Log.e("GeckoApp", "top level exception", e);
>+ ByteArrayOutputStream baos = new ByteArrayOutputStream();
>+ PrintStream ps = new PrintStream(baos);
>+ e.printStackTrace(ps);
>+ GeckoAppShell.reportJavaCrash(baos.toString());
>+ }
StringWriter instead of a ByteArrayOutputStream looks to be much more common.
>+ } catch (Exception e) {
>+ Log.e("GeckoApp", "top level exception", e);
>+ ByteArrayOutputStream baos = new ByteArrayOutputStream();
>+ PrintStream ps = new PrintStream(baos);
>+ e.printStackTrace(ps);
>+ GeckoAppShell.reportJavaCrash(baos.toString());
>+ }
>+ }
>+ });
same.
Also, maybe reportJavaCrash should just take the Exception, and call it reportJavaUnhandledException? Maybe it could take a flag if you want to abort or not.
toss one more up.
Also, ping the server folks and let them know how we are going to pass this data. not sure if there will be any other request.
Attachment #535725 -
Flags: review?(doug.turner) → review-
Assignee | ||
Comment 3•14 years ago
|
||
Assignee: nobody → blassey.bugs
Attachment #535725 -
Attachment is obsolete: true
Attachment #536647 -
Flags: review?(doug.turner)
Comment 4•14 years ago
|
||
Comment on attachment 536647 [details] [diff] [review]
patch
discussed. exceptions are hard over JNI.
did you discuss with server ops people?
Attachment #536647 -
Flags: review?(doug.turner) → review+
Assignee | ||
Comment 5•14 years ago
|
||
pushed http://hg.mozilla.org/mozilla-central/rev/54f7bd940f82
(In reply to comment #4)
> Comment on attachment 536647 [details] [diff] [review] [review]
> did you discuss with server ops people?
Yes, and it was on their agenda to discuss in today's meeting:
https://wiki.mozilla.org/Breakpad/Status_Meetings/2011-June-1#Other_issues
Assignee | ||
Updated•14 years ago
|
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
![]() |
||
Updated•14 years ago
|
Target Milestone: --- → mozilla7
Comment 6•14 years ago
|
||
Can anyone please provide some guidelines that I can use to verify this? Do I need to create any specific environment to test it?
Thanks!
Comment 7•14 years ago
|
||
We have seen examples of Java stack traces in socorro reports, so this is verified.
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•