bug 660326 - send java exceptions to crash-stats r=dougt